# charging-station-merge-tool

./: .gitignore  LICENSE  README.md  main.py  mkdocs.yml  pyproject.toml
chargingstationmergedtool/: AbstractParser.py  Config.py  CsvParser.py  DataGouvParser.py  OsmParser.py  Transform.py  chargingstationmergetool.py  config.py  transform.py  utils.py
chargingstationmergedtool/exception/: __init__.py  configparsingexception.py  datagouvscrapingexception.py  downloadexception.py
chargingstationmergedtool/exporter/: AbstractNoSqlExporter.py  MongoExporter.py  MongoFileExporter.py  SqlExporter.py  SqlFileExporter.py  __init__.py  abstractnosqlexporter.py  mongoexporter.py  mongofileexporter.py  sqlexporter.py  sqlfileexporter.py
chargingstationmergedtool/parser/: AbstractParser.py  CsvParser.py  DataGouvParser.py  OsmParser.py  __init__.py  abstractparser.py  csvparser.py  datagouvparser.py  osmparser.py
docs/: index.md
docs/api/: config.md  exporters.md  parsers.md  transform.md  utils.md
docs/user_guide/: installation.md  usage.md
src/: chargingstationmergetool.py  config.py  transform.py
src/exception/: __init__.py
src/exporter/: __init__.py  mongoexporter.py  mongofileexporter.py  sqlexporter.py  sqlfileexporter.py
src/parser/: __init__.py  csvparser.py  datagouvparser.py  osmparser.py
tests/: coverage.txt  test_Config.py  test_CsvParser.py  test_DataGouvParser.py  test_OsmParser.py  test_Transform.py  test_config.py  test_transform.py  test_utils.py
tests/exporter/: test_AbstractNoSqlExporter.py  test_MongoExporter.py  test_MongoFileExporter.py  (+7 more)
(+22 files in other folders)
