[tool.poetry]
name = "chargingstationmergedtool"
version = "0.1.0"
description = ""
authors = ["vincent DONVAL <vincent.donval@avisto.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
quackosm = "^0.12.0"
geopandas = "^1.0.1"
geoparquet = "^0.0.3"
matplotlib = "^3.9.2"
beautifulsoup4 = "^4.12.3"
sqlalchemy = "^2.0.36"
jinja2 = "^3.1.4"
pymongo = "^4.10.1"
psycopg2 = "^2.9.10"
geoalchemy2 = "^0.16.0"


[tool.poetry.group.test.dependencies]
pytest-cov = "^6.0.0"
testcontainers = "^4.8.2"


[tool.poetry.group.dev.dependencies]
mkdocstrings = {extras = ["python"], version = "^0.27.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
